<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.smastcomm.zakaztovara.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.smastcomm.zakaztovara.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.smastcomm.zakaztovara.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.smastcomm.zakaztovara.ProfileFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_zakaz"
        android:name="com.smastcomm.zakaztovara.ZakazFragment"
        android:label="@string/title_zakaz"
        tools:layout="@layout/fragment_zakaz" />

</navigation>